--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.1.3",
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.6.7",
-    "nodemon": "^2.0.20"
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.0",
+    "nodemon": "^2.0.20",
+    "socket.io": "^4.5.3"
   }
 }
